# char.lt

./: .editorconfig  .git-blame-ignore-revs  .gitignore  README.md  _lume.ts  char-lt.ngx.ts  deno.json  deploy.sh  flake.nix
_lume/: arborium.ts
backend/: .env  .gitignore  Cargo.toml  README.md  char_lt.initd
backend/migrations/: 20240102170551_create_redirects_table.sql
backend/src/: axum_unix.rs  hyper_unix.rs  main.rs
nginx/: .gitignore  nginx.conf
site/: 404.md  _data.yml  index.pug
site/_includes/: base.jsx  basic.jsx  blog-post.jsx  html.njk  main-page.jsx
site/blog/: 2019-07-12-transcoding-music.md  2019-12-07-deploying-static-sites.md  2019-12-30-jvm-hackery-noverify.md  2020-01-07-hide-signal-phone-numbers.md  2020-02-01-qmk-reactive-rgb.md  2021-06-08-duo-mobile-hotp.md  2022-01-09-extract-multimc-msa-cid.md  2024-01-05-typescript-nginx-config.md  _data.js  index.jsx
site/static/: blog-archive.css  blog-post.css  fonts.css  main-page.css  styles.css
src/: 404.md  _data.toml  anti-copyright.md  index.md  music.md
src/_includes/: base-layout.vto  blog-post.ts  footer.vto  main-page.ts  navbar.vto  simple-layout.ts
src/blog/: .gitignore  2019-07-12-transcoding-music.md  2019-12-07-deploying-static-sites.md  2019-12-30-jvm-hackery-noverify.md  2020-01-07-hide-signal-phone-numbers.md  2020-02-01-qmk-reactive-rgb.md  2021-06-08-duo-mobile-hotp.md  2022-01-09-extract-multimc-msa-cid.md  2024-01-02-writing-more.md  2024-01-05-typescript-nginx-config.md  2024-01-18-reinstalling-windows.md  2024-02-28-imagining-good-search.md  _data.js  index.page.ts  (+3 more)
(+12 files in other folders)
