[package]
name = "char_lt_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
clap = { version = "4.4.12", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.30"
hyper = { version = "1.1.0", features = ["server"] }
hyper-util = "0.1.2"
serde = { version = "1.0.194", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
